
  * Fixed a bug in the printf family of functions: these functions now return
    the number of printed arguments (as documented in icmake(1)'s man-page).

  * Fixed a bug in handling decrement and increment operators: previously
    their resulting wasn't pushed on the stack when used in return statements,
    causing a stack underflow.

  * Drive specifiers are not supported anymore

  * The internal code organization was significantly changed. Code belonging
    together is now collected in its own subdirectory, where the subdir-name
    is used as first part of the name of `public' functions (while their
    source names do not start with the subdir name (e.g. symtab_push is found
    in symtab/push.c), while their own support functions start with an
    abbreviated subdir-name, both in their names and in their source filenames
    (e.g., st_addVar is found in symtab/staddvar.c). Also, within
    subdirectories 'dirname.ih' files contain all declarations that are
    required only by the sources in that directory, while 'dirname.h' files
    contain all declarations required by other parts of icmake programs that
    use the subdirectory's `public' functions. Because of this reorganization
    several old files (like  rss/ic*h files) became obsolete and were
    removed. 

icmake (7.23.02)

  * Wow! After > 20 years being used, Martin Dorwig found a bug in icm_pp's
    getident() function: it didn't accept digits in identifiers. It's fixed in
    this release, now implementing the standard definition of an identifier.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Fri, 16 Oct 2015 14:46:41 +0200

icmake (7.23.01)

  * Overlooked checking for PRECOMP in icmbuild's precompile() function.
    Now fixed.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Thu, 15 Oct 2015 16:45:39 +0200

icmake (7.23.00)

  * Updated CXXFLAGS in generated icmconf files to contain --std=c++14

  * Added the define
        //#define PRECOMP "-x c++-header"