@@ -1,6 +1,0 @@
-#!/bin/bash
-
-bison --defines=tokens.h -o parser.c grammar || exit 1
-flex -o lexer.c lexer       || exot 1
-
-echo generated new parser and scanner 
