@@ -2,7 +2,7 @@
                             A B N O R M A L . C
 */
 
-#include "icmake.h"
+#include "icmake.ih"
 
 void abnormal_exit(int x)
 {
